Corregi errores en html y css

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -48,7 +48,7 @@
     </header>
     <main>
         <div>
-            <H2 class="DETALLES_DE_PELICULAS">DETALLES DE PELICULAS</H2>
+            <H2 class="detalles">DETALLES DE PELICULAS</H2>
         </div>
 
         <section class="sectionpadre">
@@ -414,24 +414,21 @@
                     para salvar el planeta de una amenaza de proporciones catastróficas.
 
                 </p>
-            </article>
-            <h4 class="calificacion">
-                Calificación:
-            </h4>
-            <p class="puntuacion">6.1/10⭐</p>
-            <h4>
+                <h4 class="calificacion">
+                    Calificación:
+                </h4>
+                <p class="puntuacion">6.1/10⭐</p>
                 <h4>
                     <a href="./genres.html">Género</a>
                 </h4>
                 <P>
                     <a href="./detail-genres.html">Ciencia Ficción</a>
                 </P>
-                <h4>
-                    <h4 class="estreno">
-                        <a>Fecha de Estreno:</a>
-                    </h4>
-                    <p class="estreno">16/11/2017</p>
-                    </article>
+                <h4 class="estreno">
+                    <a>Fecha de Estreno:</a>
+                </h4>
+                <p class="estreno">16/11/2017</p>
+            </article>
         </section>
 
 
