--- a/detail-series.html
+++ b/detail-series.html
@@ -49,7 +49,7 @@
 
     <main>
         <div>
-            <H2>DETALLES DE SERIES</H2>
+            <H2 class="detalles">DETALLES DE SERIES</H2>
         </div>
         <section class="sectionpadre">
             <article class="serieprincipal">
@@ -178,43 +178,43 @@
                 </P>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">22/9/2014</p>
+            </article>
+        </section>
+        <section class="sectionpadre">
+            <article class="serieprincipal">
+                <h3 class="titulosdetalles">Loki</h3>
+                <h4 class="duracion">Temporadas: 1</h4>
+                <img class="imagen" src="./img-series/poster-loki.jpg" alt="">
+                <div class="botonfavorito">
+                    <div class="letrasfavorito">
+                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                    </div>
+                </div>
+            </article>
+            <article class="cajadatos">
+                <h4 class="sinopsis">Sínopsis:</h4>
+                <p class="informacion">
+                    Loki es llevado ante la misteriosa organización llamada Autoridad de Variación Temporal
+                    después de robar el Cubo Cósmico durante los eventos de Avengers: Endgame (2019) y se le da
+                    a elegir
+                    enfrentarse a la eliminación de la realidad o ayudar contra una amenaza mayor,​ por lo cual
+                    Loki termina viajando a través del tiempo, alterando la historia humana.
 
+                    Confirmada renovación para una segunda temporada.
 
-                <section class="sectionpadre">
-                    <article class="serieprincipal">
-                        <h3 class="titulosdetalles">Loki</h3>
-                        <h4 class="duracion">Temporadas: 1</h4>
-                        <img class="imagen" src="./img-series/poster-loki.jpg" alt="">
-                        <div class="botonfavorito">
-                            <div class="letrasfavorito">
-                                <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="cajadatos">
-                        <h4 class="sinopsis">Sínopsis:</h4>
-                        <p class="informacion">
-                            Loki es llevado ante la misteriosa organización llamada Autoridad de Variación Temporal
-                            después de robar el Cubo Cósmico durante los eventos de Avengers: Endgame (2019) y se le da
-                            a elegir
-                            enfrentarse a la eliminación de la realidad o ayudar contra una amenaza mayor,​ por lo cual
-                            Loki termina viajando a través del tiempo, alterando la historia humana.
-
-                            Confirmada renovación para una segunda temporada.
-
-                        </p>
-                        <h4 class="calificacion">Calificación:</h4>
-                        <p class="puntuacion">8.4/10⭐</p>
-                        <h4>
-                            <a href="./genres.html">Género</a>
-                        </h4>
-                        <P>
-                            <a href="./detail-genres.html">Familia</a>
-                        </P>
-                        <h4 class="estreno">Fecha de Estreno:</h4>
-                        <p class="estreno">9/6/2021</p>
-                    </article>
-                </section>
+                </p>
+                <h4 class="calificacion">Calificación:</h4>
+                <p class="puntuacion">8.4/10⭐</p>
+                <h4>
+                    <a href="./genres.html">Género</a>
+                </h4>
+                <P>
+                    <a href="./detail-genres.html">Familia</a>
+                </P>
+                <h4 class="estreno">Fecha de Estreno:</h4>
+                <p class="estreno">9/6/2021</p>
+            </article>
+        </section>
     </main>
     <footer>
         <section>
