--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                  
                 <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
             
-                <h3>
+                <h3 class="tituoloprincipaldepleicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
                 </h3>
             </article>
