--- a/detail-movie.html
+++ b/detail-movie.html
@@ -93,7 +93,7 @@
 
         <section class="sectionpadre">
             <article class="peliculaprincipal">
-                <h3 class="titulosdetalles">The Dark Knight</h3>
+                <h3 class="titulosdetalles">Batman:The Dark Knight</h3>
                 <h4 class="duracion">Duración (2h 32m)</h4>
                 <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
                 <div class="botonfavorito">
