arregle fotos de spiderman e infinity war en index y detailmovies

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -165,7 +165,7 @@
                 <h4 class="duracion">
                     <a>Duración (2h 10m)</a>
                 </h4>
-                <img class="imagen" src="./img/Spider_Man_Far_From_Home_-_Póster_EEUU.png" alt="">
+                <img class="imagen" src="./img/spiderman.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
@@ -243,7 +243,7 @@
                     Duración (2h 29m)
                 </h4>
 
-                <img class="imagen" src="./img-series-nuevo/Avengers_Infinity_War_-_Póster_oficial.png" alt="">
+                <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
