--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="" alt="">
+                <img class="imagen" src="./img/spiderman.png" alt="">
                 <h3 class="tituoloprincipaldepelicula" >
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
