Cree el css del footer

--- a/genres.html
+++ b/genres.html
@@ -81,18 +81,18 @@
     </main>
     <footer>
         <section>
-            <ul>
-                <li>
+            <ul type="none" class="footer">
+                <li class="nombres"> 
                     <h4>Roberto Arellano</h4>
-                    <a href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
+                    <a class="gmail" href="mailto:rarellanochoque@udes.edu.ar">rarellanochoque@udes.edu.ar</a>
                 </li>
-                <li>
+                <li class="nombres" > 
                     <h4>Martiniano Sanchez</h4>
-                    <a href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
+                    <a class="gmail" href="mailto:martinianosanchez@udesa.edu.ar">martinianosanchez@udesa.edu.ar</a>
                 </li>
-                <li>
+                <li class="nombres" > 
                     <h4>Bonifacio Lastra</h4>
-                    <a href="mailto:blastra@udesa.edu.ar"></a>
+                    <a class="gmail" href="mailto:blastra@udesa.edu.ar">blastra@udesa.edu.ar</a>
                 </li>
             </ul>
         </section>
