Arrgle codigos y mejoras en los detalles

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -59,7 +59,7 @@
                 <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -78,11 +78,11 @@
 
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">8.4/10⭐</p>
-                <ul type="none" class="linkfinal">
-                    <li>
-                        <a href="./genres.html" class="genero">GENERO;</a>
+                <ul type="none"  class="linkfinal">
+                    <li class="generoprincipal">
+                        <a href="./genres.html" class="genero">GENERO:</a>
                     </li>
-                    <li>
+                    <li class="generoprincipal" >
                         <a href="./detail-genres.html" class="genero">FAMILIA</a>
                     </li>
                 </ul>
@@ -98,7 +98,7 @@
                 <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -132,7 +132,7 @@
                 <img class="imagen" src="./img/peli1.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -168,7 +168,7 @@
                 <img class="imagen" src="./img/spiderman.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -202,7 +202,7 @@
                 <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -246,7 +246,7 @@
                 <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -297,7 +297,7 @@
                 <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -345,7 +345,7 @@
                 <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -392,7 +392,7 @@
                 <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -443,7 +443,7 @@
                 <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
