--- a/detail-series.html
+++ b/detail-series.html
@@ -58,7 +58,7 @@
                 <img class="imagen" src="./img-series/poster titans.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -91,7 +91,7 @@
                 <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -111,7 +111,7 @@
                     <a href="./genres.html">Género:</a>
                 </h4>
                 <P>
-                    <a href="./detail-genres.html">Acción</a>
+                    <a class="favorito" href="./detail-genres.html">Acción</a>
                 </P>
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">10/4/2015</p>
@@ -124,7 +124,7 @@
                 <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -156,7 +156,7 @@
                 <img class="imagen" src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
@@ -187,7 +187,7 @@
                 <img class="imagen" src="./img-series/poster-loki.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
-                        <a href="./favoritos.html">AÑADIR A FAVORITOS +</a>
+                        <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS +</a>
                     </div>
                 </div>
             </article>
