cambios en el html

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -148,12 +148,10 @@
                 </p>
                 <h4 class="calificacion">Calificación:</h4>
                 <p class="puntuacion">7.4/10⭐</p>
-                <h4>
-                    <a href="./genres.html">Género</a>
-                </h4>
-                <P>
-                    <a href="./detail-genres.html">Ciencia Ficción</a>
-                </P>
+
+                <h4 class="calificacion">Genero:</h4>
+                <p class="puntuacion"><a href="./genres.html"> Ciencia Ficción</a></p>
+
                 <h4 class="estreno">Fecha de Estreno:</h4>
                 <p class="estreno">5/8/2021</p>
             </article>
