--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <h1>
             <a href="./index.html" class="titulo">LIVE STAR</a>
         </h1>
-        <ul type="none" class="controles">
-            <li class="controleshijo">
-                <form action="./search-results.html" method="GET" class="buscador">
-                    <div>
-                        <input type="text" name="buscar" placeholder="Buscar..">
-                    </div>
-                    <div>
-                        <button type="submit" class="boton">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
+        <form action="./search-results.html" method="GET" class="buscador">
+            <div>
+                <input type="text" name="buscar" placeholder="Buscar..">
+            </div>
+            <div>
+                <button type="submit" class="boton">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
 
-                </form>
+        </form>
+        <ul class="controles">
+            <li class="controleshijo">
             </li>
             <li>
                 <a href="./index.html" class="controleshijo">INICIO</a>
